--- a/style.css
+++ b/style.css
@@ -256,3 +256,110 @@ style pour la section a propos */
     text-decoration: none;
     color: var(--primary);
 }
+
+/* style pour la page contact */
+.contact{
+    width: 100%;
+    height: 600px;
+    position: relative;
+}
+
+.contact h2{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--primary);
+    margin-top: 90px;
+    margin-bottom: 15px;
+}
+
+.contact p{
+    color: var(--primary);
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.contact-item{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-left{
+    background-color: var(--tertiary);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+    border-radius: 8px;
+    width: 50%;
+    height: 50%;
+    margin: 60px;
+}
+
+.contact-left form{
+    margin: 20px;
+}
+
+
+.contact-left label{
+    font-size: 16px;
+    color: var(--primary);
+}
+
+.contact-left input{
+    width: 100%;
+    padding: 10px 20px;
+    border: 2px solid #999;
+    border-radius: 8px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.contact-left textarea{
+    padding: 30px 15px;
+    width: 100%;
+    margin-bottom: 20px;
+    border: 2px solid #999;
+    border-radius: 8px;
+}
+
+.contact-left button{
+    width: 100%;
+    padding: 15px;
+    background-color: var(--primary);
+    border: none;
+    border-radius: 8px;
+}
+
+.contact-left button a{
+    text-decoration: none;
+    color: var(--tertiary);
+    font-size: 16px;
+}
+
+.contact-right img{
+    width: 100%;
+    height: 450px;
+    object-fit: contain;
+    padding-right: 80px;
+}
+
+
+/* style pour le footer */
+
+footer{
+    background-color: var(--primary);
+    border-radius: 60px 60px 0 0;
+    padding: 20px 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: var(--tertiary);
+    font-size: 16px;
+    margin-top: 40px;
+}
+
+footer .logo-div span{
+    color: var(--secondary);
+}
+
+
