--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root{
     --primary: #100E34;
     --secondary: #FFBF18;
@@ -9,6 +11,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
+    line-height: 1.6;
 }
 
 header{
@@ -45,23 +50,41 @@ header{
     color: var(--tertiary);
     text-decoration: none;
     font-size: 18px;
+    transition: 0.5s;
+}
+
+.menu-item nav ul li a:hover{
+    background-color: var(--secondary);
+    color: #100E34;
+    border-radius: 20px;
+    padding: 10px;
+    font-weight: bold;
 }
 
 .menu-btn{
-    padding: 8px 15px;
+    padding: 10px 30px;
     background-color:var(--secondary);
-    border-radius: 8%;
+    border-radius: 20px;
+    transition: 0.5s;
+}
+
+.menu-btn:hover{
+    background-color: var(--tertiary);
+    transform: rotate(5deg);
+    border: 2px solid var(--secondary);
 }
 
 .menu-btn a{
     text-decoration: none;
     color: var(--primary);
     font-size: 16px;
+    
 }
+
 
 /* style pour la banniere */
 
-.hero{
+#hero{
     position: relative;
     background-color:var(--tertiary);
     width: 100%;
@@ -104,11 +127,18 @@ header{
 }
 
 .hero-letf a{
-    padding: 10px 40px;
+    padding: 15px 40px;
     background-color: var(--secondary);
     text-decoration: none;
     color: var(--primary);
     border-radius: 10px;
+    transition: 0.5s;
+}
+
+.hero-letf a:hover{
+    background-color: var(--primary);
+    color: var(--tertiary);
+    transform: rotate(10deg);
 }
 
 .hero-right img{
@@ -125,7 +155,7 @@ header{
 /* 
 style pour la section a propos */
 
-.about-me{
+#about-me{
     display: flex;
     margin: 5%;
 }
@@ -142,10 +172,20 @@ style pour la section a propos */
 }
 
 .about-right h3{
-    font-size: 28px;
-    color: var(--secondary);
+   font-size: 30px;
+    color: var(--primary);
     margin-bottom: 4%;
 }
+
+.about-right h3::after{ 
+  content: '';
+  display: block;
+  width: 80px;
+  height: 4px;
+  background-color: var(--primary-light);
+  margin: 1rem auto 2rem;
+}
+
 
 .about-right p{
     color: var(--primary);
@@ -157,6 +197,7 @@ style pour la section a propos */
 .social-media{
     font-size: 25px;
 }
+
 
 .social-media .fa-facebook, .social-media .fa-discord, .social-media .fa-linkedin{
     background-color: var(--secondary);
@@ -175,13 +216,13 @@ style pour la section a propos */
 
 /* style pour les projets */
 
-.projets{
+#projets{
     background-color: var(--bg);
     height: 750px;
     padding: 50px;
 }
 
-.projets h1{
+#projets h1{
     text-align: center;
     font-size: 30px;
     font-weight: bold;
@@ -189,7 +230,7 @@ style pour la section a propos */
     margin-bottom: 15px;
 }
 
-.projets p{
+#projets .text{
     color: var(--primary);
     text-align: center;
     margin-bottom: 40px;
@@ -203,16 +244,27 @@ style pour la section a propos */
 
 .card-item{
     background-color:var(--tertiary);
-    width: 32%;
+    width: 31%;
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 60px;
+    transition: 0.5s;
+}
+
+.card-item:hover{
+    transform: scale(1.1);
 }
 
 .card-item img{
     width: 100%;
     height: 50%;
+    object-fit: cover;
     border-radius: 10px 10px 0 0;
+    transition: 0.5s;
+}
+
+.card-item img:hover{
+    transform: scale(1.0);
 }
 
 .card-item h3{
@@ -224,6 +276,7 @@ style pour la section a propos */
 }
 
 .card-item p{
+    color: var(--primary);
     padding: 15px;
     margin-bottom: 10px;
     text-align: start;
@@ -246,6 +299,11 @@ style pour la section a propos */
 
 .projet-btn{
     text-align: center;
+    transition: 0.5s;
+}
+
+.projet-btn:hover{
+    transform: rotate(5deg);
 }
 
 .projet-btn a{
@@ -257,14 +315,19 @@ style pour la section a propos */
     color: var(--primary);
 }
 
+.projet-btn a:hover{
+    background-color: var(--secondary);
+    color: var(--primary);
+}
+
 /* style pour la page contact */
-.contact{
+#contact{
     width: 100%;
     height: 600px;
     position: relative;
 }
 
-.contact h2{
+#contact h2{
     text-align: center;
     font-size: 30px;
     font-weight: bold;
@@ -273,7 +336,7 @@ style pour la section a propos */
     margin-bottom: 15px;
 }
 
-.contact p{
+#contact p{
     color: var(--primary);
     text-align: center;
     margin-bottom: 40px;
@@ -308,13 +371,14 @@ style pour la section a propos */
     padding: 10px 20px;
     border: 2px solid #999;
     border-radius: 8px;
-    margin-top: 10px;
-    margin-bottom: 15px;
+    margin-top: 8px;
+    margin-bottom: 10px;
 }
 
 .contact-left textarea{
     padding: 30px 15px;
     width: 100%;
+    margin-top: 8px;
     margin-bottom: 20px;
     border: 2px solid #999;
     border-radius: 8px;
@@ -326,6 +390,11 @@ style pour la section a propos */
     background-color: var(--primary);
     border: none;
     border-radius: 8px;
+    cursor: pointer;
+}
+
+.contact-left button:hover{
+    background-color: var(--secondary);
 }
 
 .contact-left button a{
@@ -333,6 +402,7 @@ style pour la section a propos */
     color: var(--tertiary);
     font-size: 16px;
 }
+
 
 .contact-right img{
     width: 100%;
@@ -355,7 +425,7 @@ footer{
     flex-direction: column;
     color: var(--tertiary);
     font-size: 16px;
-    margin-top: 40px;
+    margin-top: 90px;
 }
 
 footer .logo-div span{
