--- a/style.css
+++ b/style.css
@@ -253,13 +253,13 @@ style pour la section a propos */
 
 /* style pour les competences */
 
-.competences{
+#competences{
     width: 100%;
     height: 500px;
     margin-bottom: 10%;
 }
 
-.competences h2{
+#competences h2{
     position: relative;
     text-align: center;
     font-size: 30px;
@@ -268,7 +268,7 @@ style pour la section a propos */
     margin-bottom: 50px;
 }
 
-.competences h2::after{
+#competences h2::after{
   content: '';
   position: absolute;
   left: 535px;
@@ -281,9 +281,10 @@ style pour la section a propos */
 
 .competence-item{
     display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
 }
+
 
 .competence-item .fa-solid{
     height: 30px;
@@ -300,6 +301,12 @@ style pour la section a propos */
     border-radius: 10px;
     padding: 40px 80px;
     margin: 50px;
+    transition: 0.5s;
+}
+
+.competences-technique:hover{
+    transform: scale(1.1);
+    border: 1px solid var(--primary);
 }
 
 .competences-technique h3{
@@ -319,6 +326,12 @@ style pour la section a propos */
     border-radius: 10px;
     padding: 40px 80px;
     margin: 50px;
+    transition: 0.5s;
+}
+
+.Technologies:hover{
+    transform: scale(1.1);
+    border: 1px solid var(--primary);
 }
 
 .Technologies h3{
