--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ header{
 .hero-right img{
     position:absolute;
     top: 20px;
-    left: 850px;
+    left: 61%;
     width: 32%;
     height: 90%;
     padding-left: 10px;
