--- a/css/style.css
+++ b/css/style.css
@@ -398,61 +398,53 @@ style pour la section a propos */
     gap: 15px;
 }
 
-.card-item{
-    background-color:var(--tertiary);
-     box-shadow: 0 8px 20px rgba(0,0,0,0.05);
-    width: 31%;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-bottom: 60px;
-    transition: 0.5s;
+.card-item {
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+  transition: all 0.3s ease;
 }
 
-.card-item:hover{
-    transform: scale(1.1);
+.project-image {
+  height: 200px;
+  overflow: hidden;
+  position: relative;
 }
 
-.card-item img{
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
-    transition: 0.5s;
+.project-link {
+  color: var(--primary-light);
+  font-weight: 500;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.3rem;
+  width: 50px;
+  height: 50px;
+  background: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  transition: all 0.3s ease;
 }
 
-.card-item img:hover{
-    transform: scale(1.0);
+.project-links {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(27, 50, 100, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
-.card-item h3{
-    font-size: 20px;
-    color: var(--primary);
-    margin-top: 10px;
-    margin-bottom: 5px;
-    padding-left: 15px;
-}
-
-.card-item p{
-    color: var(--primary);
-    padding: 15px;
-    margin-bottom: 10px;
-    text-align: start;
-}
-
-.card-item ul{
-    display: flex;
-    gap: 20px;
-    list-style: none;
-    padding-left: 15px;
-}
-
-.card-item ul li{
-    color: #100E34;
-    background-color: #f5f3f3;
-    padding: 2px 10px;
-    border-radius: 10px;
-    margin-bottom: 50px;
-}
 
 .projet-btn{
     text-align: center;
