--- a/css/responsive.css
+++ b/css/responsive.css
@@ -190,8 +190,12 @@
 
     .about-right {
         margin-left: 0;
-        text-align: center;
+        text-align: justify;
         width: 100%;
+    }
+
+    .about-right h3{
+        text-align: center;
     }
 
     .about-right h3::after {
@@ -229,12 +233,12 @@
         min-height: auto;
     }
 
-    #projets h1 {
+    #projets h2 {
         font-size: 28px;
         margin-bottom: 20px;
     }
 
-    #projets h1::after {
+    #projets h2::after {
         left: 50%;
         transform: translateX(-50%);
         width: 150px;
@@ -422,6 +426,7 @@
     }
 
     .hero-letf p {
+        text-align: justify;
         font-size: 13px;
         margin: 15px 0;
         line-height: 1.6;
@@ -604,12 +609,12 @@
         min-height: auto;
     }
 
-    #projets h1 {
+    #projets h2 {
         font-size: 24px;
         margin-bottom: 15px;
     }
 
-    #projets h1::after {
+    #projets h2::after {
         left: 50%;
         transform: translateX(-50%);
         width: 120px;
@@ -726,12 +731,10 @@
     }
 
     .contact-left button {
+        font-size: 14px;
         padding: 12px;
     }
 
-    .contact-left button a {
-        font-size: 14px;
-    }
 
     .contact-right {
         width: 100%;
@@ -874,12 +877,12 @@
         padding: 25px 10px;
     }
 
-    #projets h1 {
+    #projets h2 {
         font-size: 20px;
         margin-bottom: 12px;
     }
 
-    #projets h1::after {
+    #projets h2::after {
         width: 100px;
     }
 
