--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,7 @@ style pour la section a propos */
 .about-right p{
     color: var(--primary);
     font-size: 14px;
+    text-align: justify;
     line-height: 1.5;
 }
 
@@ -366,7 +367,7 @@ style pour la section a propos */
     padding: 50px;
 }
 
-#projets h1{
+#projets h2{
     position: relative;
     text-align: center;
     font-size: 30px;
@@ -375,10 +376,10 @@ style pour la section a propos */
     margin-bottom: 15px;
 }
 
-#projets h1::after{
+#projets h2::after{
   content: '';
   position: absolute;
-  left: 458px;
+  left: 43%;
   bottom: -7px;
   width: 200px;
   height: 4px;
@@ -606,18 +607,16 @@ style pour la section a propos */
     background-color: var(--primary);
     border: none;
     border-radius: 8px;
+    color: var(--tertiary);
+    font-size: 16px;
     cursor: pointer;
 }
 
 .contact-left button:hover{
     background-color: var(--secondary);
+    color: var(--primary);
 }
 
-.contact-left button a{
-    text-decoration: none;
-    color: var(--tertiary);
-    font-size: 16px;
-}
 
 
 .contact-right img{
